Update index.html to include support pages

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
             <a href="PetCareToolkit/docs/privacy-policy-zh.html">隐私政策 (中文)</a>
             <div class="description">我们的中文隐私政策，详细说明我们如何处理您的个人信息。</div>
         </li>
+        <li>
+            <a href="PetCareToolkit/docs/support-en.html">Support (English)</a>
+            <div class="description">Get help and support for using the Pet Care Toolkit application.</div>
+        </li>
+        <li>
+            <a href="PetCareToolkit/docs/support-zh.html">支持 (中文)</a>
+            <div class="description">获取使用宠物护理工具包应用程序的帮助和支持。</div>
+        </li>
     </ul>
     
     <footer style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee; color: #666; font-size: 0.9em;">
